fix: gap partners

--- a/src/components/home/partners/partners.module.css
+++ b/src/components/home/partners/partners.module.css
@@ -16,7 +16,7 @@
 .partnersContent {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  justify-content: space-between;
   padding: 4rem 5rem;
   background-color: #5757ad;
   color: white;
